# AUV_projects

./: .~lock.task 2 report.odt#  README.md  task 1 report.odt  task 2 report.odt
catkin_ws/devel/: .catkin  setup.sh
catkin_ws/devel/include/auv_chat/: ChatMsg.h
catkin_ws/devel/include/bot_simulator/: botpose.h
catkin_ws/devel/lib/pkgconfig/: auv_chat.pc  bot_simulator.pc  edge_detector.pc  number_play.pc  webcam_display.pc
catkin_ws/devel/lib/webcam_display/: webcam_node.py
catkin_ws/devel/share/auv_chat/cmake/: auv_chat-msg-extras.cmake  auv_chat-msg-paths.cmake  auv_chatConfig.cmake
catkin_ws/devel/share/bot_simulator/cmake/: bot_simulator-msg-paths.cmake  bot_simulatorConfig.cmake
catkin_ws/src/: .~lock.task 1 report.odt#
catkin_ws/src/auv_chat/: CMakeLists.txt
catkin_ws/src/auv_chat/msg/: ChatMsg.msg
catkin_ws/src/auv_chat/scripts/: chat_node.py
catkin_ws/src/bot_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/bot_simulator/scripts/: bot_controller.py  command_publisher.py
catkin_ws/src/camera_pipeline/: cam_display.py
catkin_ws/src/camera_viewer/: CMakeLists.txt  package.xml
catkin_ws/src/camera_viewer/scripts/: edge_detect_publisher.py  edge_detect_subscriber.py
catkin_ws/src/edge_detector/: CMakeLists.txt  package.xml
catkin_ws/src/edge_detector/src/: edge_detect_publisher.py  edge_subscriber.py
catkin_ws/src/number_play/: CMakeLists.txt  package.xml
catkin_ws/src/number_play/scripts/: adder.py  multiplier.py  publisher.py
catkin_ws/src/webcam_display/: CMakeLists.txt
(+21 files in other folders)
