<?xml version="1.0"?>
<package format="2">
  <name>camera_viewer</name>
  <version>0.0.0</version>
  <description>The camera_viewer package</description>

  <maintainer email="shwetha@todo.todo">shwetha</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <export>
  </export>
</package>

